deployments/overlays/int/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: add-ui
spec:
  redirectRegex:
      regex: "^https://([^/]+)/?$"
      replacement: "https://${1}/ui/"
      permanent: true
