deployments/overlays/int/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snaptrail-deployment
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: int-snaptrail-add-ui@kubernetescrd
spec:
  tls:
    - hosts:
        - int.snaptrail.markusharder.com
      secretName: letsencrypt-traefik-cert
  rules:
    - host: int.snaptrail.markusharder.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: snaptrail-service
                port:
                  number: 80
